--- a/static/css/st.css
+++ b/static/css/st.css
@@ -79,7 +79,7 @@ ol li:last-child{
 
 .empty{
     width: 100%;
-    height: 200px;
+    height: 440px;
 }
 
 .main_answers_block{
@@ -102,30 +102,51 @@ ol li:last-child{
 .answers_categories:last-child{
     padding-bottom: 80px;
 }
-.answer_row{
-    display: flex;
-    justify-content: space-between;
-}
-.answer{
+
+.odd{
     position: relative;
     color: white;
+    width: 500px;
+    margin-bottom: 70px;
+}
+.odd:last-child{
+    margin-bottom: 0;
+}
+.answer_row{
+    position: relative;
+}
+.even{
+    position: relative;
+    color: white;
+    width: 500px;
+}
+.even_wrap{
+    position: absolute;
+    top: -511px;
+    right: -600px;
 }
 .answer_description{
     position: absolute;
-    top: 90px;
+    top: 80px;
     left: 40px;
     width: 420px;
-    font-size: 25px;
+    font-size: 26px;
     font-weight: 500;
     line-height: 1.5;
 }
 .answer_title{
+    text-align: center;
+    font-size: 27px;
+    font-weight: 500;
+}
+.p{
     position: absolute;
     top: -20px;
-    text-align: center;
+	background-color: #1E1F29;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
+    border-radius: 25px;
+	padding: 15px 20px;
     width: 100%;
-    font-size: 25px;
-    font-weight: 500;
 }
 .question_title {
 	background-color: #1E1F29;
