--- a/templates/base.html
+++ b/templates/base.html
@@ -58,13 +58,13 @@
             <div class="footer">
                 <div class="faq">
                     <p class="title_foot">FAQ</p>
-                    <p class="privacy_foot">Privacy Policy</p>
-                    <p class="email_foot">Email: quizzland@gmail.com</p>
+                    <p class="privacy_foot"><a href="privacy" class="item_link signin_bottom">Privacy Policy</a></p>
+                    <p class="email_foot item_link_footer">Email: quizzland@gmail.com</p>
                 </div>
                 <div class="about_us">
                     <p class="title_foot">ABOUT US</p>
-                    <p class="address_foot">Address: Kyrgyzstan, Bishkek, Maldybaeava, 34B    </p>
-                    <p class="contacts_foot">Contacts: +996 773 062 755, +996 999 090 897</p>
+                    <p class="address_foot item_link_footer">Address: Kyrgyzstan, Bishkek, Maldybaeava, 34B    </p>
+                    <p class="contacts_foot item_link_footer">Contacts: +996 773 062 755, +996 999 090 897</p>
                 </div>
             </div>
         </div>
