--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                 <div class="header_wrapper_wrap">
                     <div class="wrapper_logo">
                         <a href="/" class="logo-link">
-                            <img src="media/svg/logo.svg" alt="loggo" class="link">
+                            <img src="/media/svg/logo.svg" alt="loggo" class="link">
                         </a>
                         <form action="" method="get">
                             <input type="search" placeholder="Search..." >
@@ -52,7 +52,6 @@
                 </div>
             </div>
         </div>
-        <div class="main">
             {% block content_1 %}
             {% endblock %}
             <div class="footer">
@@ -67,7 +66,6 @@
                     <p class="contacts_foot item_link_footer">Contacts: +996 773 062 755, +996 999 090 897</p>
                 </div>
             </div>
-        </div>
     </div>
 </body>
 </html>
