--- a/static/css/base_styles.css
+++ b/static/css/base_styles.css
@@ -117,6 +117,7 @@ input, select {
     background-color: white;
     max-width: 100%;
     max-height: 100vh;
+    text-align: center;
 }
 
 body {
