--- a/static/css/quizzes_styles.css
+++ b/static/css/quizzes_styles.css
@@ -105,7 +105,7 @@ body{
     width: 100%;
     height: 100%;
     font-family: 'Bellota Text';
-    background-color: #D3EAFF ;
+    background-color: rgb(211,234,255);
 }
 
 .content{
