--- a/static/css/quizzes_styles.css
+++ b/static/css/quizzes_styles.css
@@ -105,7 +105,7 @@ body{
     width: 100%;
     height: 100%;
     font-family: 'Bellota Text';
-    background-color: rgb(211,234,255);
+    background-color: #D3EAFF;
 }
 
 .content{
@@ -204,9 +204,9 @@ body{
 }
 .level_link{
     font-size: 28px;
-    line-height: 35px;
+    line-height: 12px;
     color: #47445A;
-    line-height: 45px;
+    font-weight: 300;
 }
 .level_link:hover{
     color: #7B75A4;
