--- a/templates/quizzes.html
+++ b/templates/quizzes.html
@@ -48,6 +48,9 @@
                         <ul class="levels">
                             <li><a href="#" class="level_link">easy</a></li>
                             <li><a href="#" class="level_link">hard</a></li>
+                            <li><a href="#" class="level_link">hard</a></li>
+                            <li><a href="#" class="level_link">hard</a></li>
+                            <li><a href="#" class="level_link">hard</a></li>
                         </ul>
                     </li>
                 </ul>
