--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -28,7 +28,7 @@
                     <a href="{% url 'login' %}">Log in</a>
                     <p class="lisences">By signing up, you agree to the
                     <a href="" class="">License agreement</a>
-                    and <a href="" class="">Privacy policy</a></p>
+                    and <a href="{% url 'privacy' %}" class="">Privacy policy</a></p>
                 </div>
             </div>
         </div>
