--- a/templates/quizzes.html
+++ b/templates/quizzes.html
@@ -38,14 +38,12 @@
             </div>
             <div class="quizzes_block">
                 <ul class="topic">
-                    {% for area in areas %}
-                    <li class="pre_topics"><p>{{ area.name }}</p>
+                    <li class="pre_topics"><p>Grade 1</p>
                         <ul class="levels">
                             <li><a href="#" class="level_link">easy</a></li>
                             <li><a href="#" class="level_link">hard</a></li>
                         </ul>
                     </li>
-                    {% endfor %}
                 </ul>
             </div>
         </div>
