--- a/static/css/base_styles.css
+++ b/static/css/base_styles.css
@@ -114,7 +114,7 @@ input, select {
 
 /* CONTENT START */
 .fullsite{
-    background-color: white;
+    margin: 0 auto;
     max-width: 100%;
     max-height: 100vh;
     text-align: center;
@@ -125,7 +125,6 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 28px;
-    background-color: #ffffff;
 }
 
 .header{
