--- a/templates/materials.html
+++ b/templates/materials.html
@@ -19,17 +19,17 @@ Materials
                     in this page u can prepare kvsksmk!</div>
             </div>
             <div class="topic_wrapper">
-                <div class="topic_title">{{ subjects.subject }}</div>
+                <div class="topic_title"></div>
                 <div class="list__wrapper">
                     <ul class="list_topics">
-                        <a href="" class="topic_link">
-                            {% for subject in subjects %}
+
                             <li class="topic">
-                                <img src="{{ subject.image.url }}" alt="">
-                                <div class="title__topic"><p>{{ subject.topic }}</p></div>
+                                <a href="{{ subject.url }}" class="topic_link">
+                                    <img src="{{ subject.image.url }}" alt="">
+                                    <div class="title__topic"><p>{{ subject.topic }}</p></div>
+                                </a>
                             </li>
-                            {% endfor %}
-                        </a>
+
                     </ul>
                 </div>
             </div>
