subject_materila_for_Asem_4

--- a/templates/quizzes.html
+++ b/templates/quizzes.html
@@ -67,6 +67,7 @@
             <li>
                <p>Date od publication: {{ i.creation_date }}</p><br> <br>
                 {{ i.comment_text }}
+                {{ i.author }}
             </li>
             <hr>
             {% endfor %}
