--- a/templates/index.html
+++ b/templates/index.html
@@ -77,8 +77,8 @@
     <br><br>
 
     <div class="categories_block">
-        <div class="quizzes_entry">
-            <p class="entry">Quizland quizzes</p>
+        <div class="quizzes_entry" id="catalog">
+            <p class="entry" >Quizland quizzes</p>
         </div>
         <div class="blocks_wrapper">
             <p class="justtext">This section contains various topics and
